# parameterized_mortgage

./: .gitignore  README.md  pyproject.toml
docs/: conf.py  parameterized_mortgage.dashboard.rst  parameterized_mortgage.models.rst  tests.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  parameterized_mortgage.dashboard.doctree  parameterized_mortgage.doctree  parameterized_mortgage.models.doctree  tests.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  parameterized_mortgage.dashboard.html  parameterized_mortgage.html  parameterized_mortgage.models.html  py-modindex.html  search.html  searchindex.js  tests.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/parameterized_mortgage/: calculate.html
docs/_build/html/_modules/parameterized_mortgage/dashboard/: components.html
docs/_build/html/_modules/parameterized_mortgage/models/: mortgage.html
docs/_build/html/_modules/tests/: test_calcs.html  test_mortgage.html
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt  parameterized_mortgage.rst.txt
jupyter/: scratch.ipynb
parameterized_mortgage/: __init__.py  __main__.py  calcs.py  calculate.py  mortgage.py
parameterized_mortgage/dashboard/: __init__.py  components.py  panel_dashboard.py  testpanel.py
parameterized_mortgage/models/: __init__.py  calcs.py  loan_types.py  mortgage.py  parameterized_class_problem.py
tests/: __init__.py  dummy_data.py  dummy_schedule.csv  test_calcs.py  test_loan.py  test_mortgage.py
