[tool.poetry]
name = "mortgage-calculator"
version = "0.1.0"
description = "A simple python package to provide mortgage repayment calculations using the French method of amortization"
authors = ["Jonathan Mair <jonathan.mair@gmail.com>"]
license = "GNU V3"
readme = "README.md"
packages = [{include = "mortgage_calculator"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"

[tool.poetry.group.dev.dependencies]
131228_pytest_1 = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
