[tool.poetry]
name = "parameterized_mortgage"
version = "0.1.2"
description = "A simple python package to provide mortgage repayment calculations using the French method of amortization"
authors = ["Jonathan Mair <jonathan.mair@gmail.com>"]
license = "GNU V3"
readme = "README.md"
packages = [{include = "parameterized_mortgage"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
param = "^1.13.0"
panel = "^1.2.0"
hvplot = "^0.8.4"
matplotlib = "^3.7.2"
plotly = "^5.16.1"

[tool.poetry.group.dev.dependencies]
131228_pytest_1 = "^1.0.0"
pytest = "^7.4.0"
jupyter = "1.0.0"
notebook = "6.5.4"
plotly = "^5.15.0"
sphinx = "^7.1.1"
black = "^23.7.0"
twine = "^4.0.2"

[tool.poetry.scripts]
dashboard = "parameterized_mortgage.dashboard:demo"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
